// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render extension correctly 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Foo"
  />
  <div />
</div>
`;

exports[`should render extension correctly 2`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Foo"
  />
  <div
    className="extension"
  />
</div>
`;
